k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-site
  namespace: portfolio-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-site
  template:
    metadata:
      labels:
        app: portfolio-site
    spec:
      containers:
        - name: portfolio-site
          image: ghcr.io/boudreaux-labs/app-portfolio-site:b2ab7056b3f760798e0d1c9565ec6805de88716f
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
