k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-site
  namespace: portfolio-site
spec:
  selector:
    app: portfolio-site
  ports:
    - port: 80
      targetPort: 80
